优化SqlBuilder中使用到构造函数的地方；